fix(flashcard): add imageUrls, soundUrls, references to create, update flashcard
