# src/v1/models/dto/request/flashCard/CreateFlashCardRequest.ts
@@ -1,5 +1,7 @@
-import {IsEmail, IsOptional, IsString, Length, MaxLength} from 'class-validator';
+import { Type } from 'class-transformer';
+import {IsArray, IsEmail, IsOptional, IsString, Length, MaxLength, ValidateNested} from 'class-validator';
 import {IsNotEmptyString} from "../../../../utils/validation/IsNotEmptyString";
+import { KeyValueRequest } from './KeyValueRequest';
 
 export class CreateFlashCardRequest {
     @IsString()
@@ -14,4 +16,19 @@ export class CreateFlashCardRequest {
     @Length(1, 50)
     @IsNotEmptyString()    
     public categoryId: string    
+    @IsArray()
+    @ValidateNested({each: true})
+    @Type(() => KeyValueRequest)
+    @IsOptional()
+    imageUrls: KeyValueRequest[];
+    @IsArray()
+    @ValidateNested({each: true})
+    @Type(() => KeyValueRequest)
+    @IsOptional()
+    soundUrls: KeyValueRequest[];
+    @IsArray()
+    @ValidateNested({each: true})
+    @Type(() => KeyValueRequest)
+    @IsOptional()
+    references: KeyValueRequest[];
 }
