# src/v1/models/dto/request/flashCard/UpdateFlashCardRequest.ts
@@ -1,5 +1,7 @@
-import {IsEmail, IsOptional, IsString, Length, MaxLength} from 'class-validator';
+import { Type } from 'class-transformer';
+import {IsArray, IsEmail, IsOptional, IsString, Length, MaxLength, MinLength, ValidateNested} from 'class-validator';
 import {IsNotEmptyString} from "../../../../utils/validation/IsNotEmptyString";
+import { KeyValueRequest } from './KeyValueRequest';
 
 export class UpdateFlashCardRequest {
     @IsString()
@@ -8,8 +10,23 @@ export class UpdateFlashCardRequest {
     @IsOptional()
     public title: string
     @IsString()
-    @Length(1, 50)
+    @MinLength(1)
     @IsNotEmptyString()    
     @IsOptional()
-    public description: string    
+    public description: string   
+    @IsArray()
+    @ValidateNested({each: true})
+    @Type(() => KeyValueRequest)
+    @IsOptional()
+    imageUrls: KeyValueRequest[];
+    @IsArray()
+    @ValidateNested({each: true})
+    @Type(() => KeyValueRequest)
+    @IsOptional()
+    soundUrls: KeyValueRequest[];
+    @IsArray()
+    @ValidateNested({each: true})
+    @Type(() => KeyValueRequest)
+    @IsOptional()
+    references: KeyValueRequest[]; 
 }
